<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cfeaf3">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#cfeaf3"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/header_iv_marginbottom"
                android:layout_marginTop="@dimen/header_iv_margintop"
                android:layout_weight="1"
                android:scaleType="centerInside"
                android:src="@drawable/header" />

            <LinearLayout
                android:id="@+id/ll_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_start_game"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/btn_marginbottom"
                    android:layout_marginTop="@dimen/btn_margintop"
                    android:background="@drawable/button_initial_screen"
                    android:fontFamily="sans-serif"
                    android:paddingBottom="@dimen/btn_paddingtopbottom"
                    android:paddingLeft="@dimen/btn_paddingleftright"
                    android:paddingRight="@dimen/btn_paddingleftright"
                    android:paddingTop="@dimen/btn_paddingtopbottom"
                    android:text="@string/play"
                    android:textColor="#fff"
                    android:textSize="@dimen/btn_tv"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/btn_marginbottom"
                    android:background="@drawable/button_initial_screen"
                    android:fontFamily="sans-serif"
                    android:paddingBottom="@dimen/btn_paddingtopbottom"
                    android:paddingLeft="@dimen/btn_paddingleftright"
                    android:paddingRight="@dimen/btn_paddingleftright"
                    android:paddingTop="@dimen/btn_paddingtopbottom"
                    android:text="@string/settings"
                    android:textColor="#fff"
                    android:textSize="@dimen/btn_tv"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_leaderboard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/btn_marginbottom"
                    android:background="@drawable/button_initial_screen"
                    android:fontFamily="sans-serif"
                    android:paddingBottom="@dimen/btn_paddingtopbottom"
                    android:paddingLeft="@dimen/btn_paddingleftright"
                    android:paddingRight="@dimen/btn_paddingleftright"
                    android:paddingTop="@dimen/btn_paddingtopbottom"
                    android:text="@string/high_scores"
                    android:textColor="#fff"
                    android:textSize="@dimen/btn_tv"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_rate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/btn_marginbottom"
                    android:background="@drawable/button_initial_screen"
                    android:paddingBottom="@dimen/btn_paddingtopbottom"
                    android:paddingLeft="@dimen/btn_paddingleftright"
                    android:paddingRight="@dimen/btn_paddingleftright"
                    android:paddingTop="@dimen/btn_paddingtopbottom"
                    android:text="@string/rate"
                    android:textColor="#fff"
                    android:textSize="@dimen/btn_tv"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btn_moreapps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/btn_paddingtopbottom"
                    android:background="@drawable/button_initial_screen"
                    android:paddingBottom="@dimen/btn_paddingtopbottom"
                    android:paddingLeft="@dimen/btn_paddingleftright"
                    android:paddingRight="@dimen/btn_paddingleftright"
                    android:paddingTop="@dimen/btn_paddingtopbottom"
                    android:text="@string/more_apps"
                    android:textColor="#fff"
                    android:textSize="@dimen/btn_tv"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>

    </FrameLayout>

</RelativeLayout>